--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,8 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CurrentScalingGridSize=0
-CurrentPosGridSize=0
-GridEnabled=False
+CurrentPosGridSize=1
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -161,8 +160,12 @@ ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1035,24 +1038,24 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem1=/Game/PuzzleBP/Blueprints/Cube
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem3=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem5=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem7=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem9=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem10=/Game/Materials/ALANScreen
-MRUItem11=/Game/Materials/CGreen
-MRUItem12=/Game/Materials/CRed
-MRUItem13=/Game/Materials/ConveyorRed
-MRUItem14=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem15=/Game/Audio/Music/dynamicCue
-MRUItem16=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem17=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem3=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem4=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem5=/Game/PuzzleBP/Blueprints/Cube
+MRUItem6=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem7=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem9=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem11=/Game/Materials/ALANScreen
+MRUItem12=/Game/Materials/CGreen
+MRUItem13=/Game/Materials/CRed
+MRUItem14=/Game/Materials/ConveyorRed
+MRUItem15=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem16=/Game/Audio/Music/dynamicCue
+MRUItem17=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
 MRUItem18=/Game/ParticleFX/AlanRings/ringsSystem
 MRUItem19=/Game/Materials/FloorPlane1
 
@@ -2558,7 +2561,7 @@ InstalledPlugins=VictoryBPLibrary
 [DetailPropertyExpansion]
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" "
 MaterialExpression=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2568,8 +2571,8 @@ SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent=
 PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface=
@@ -2617,8 +2620,8 @@ Box_Bp_C=
 StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C=
-ALAN_C=
+OutputDisplay_C="\"Object.PuzzleFileName\" "
+ALAN_C="\"Object.CommandsExecuted\" "
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
@@ -2802,7 +2805,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2861,14 +2864,14 @@ PreserveScaleRatio=True
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=
 ControlPanel_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+OutputDisplay_C=
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ALAN_C=
-BrushComponent=
+BrushComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
@@ -2938,7 +2941,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
-SceneComponent=
+SceneComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
