pushed final sound cues. fixed audio bug. improved ring FX

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,22 +154,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Audio
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp
+CleanShutdown=True
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
-WindowSize=X=1273.333 Y=665.333
+WindowSize=X=1273.000 Y=665.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -186,7 +183,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1038,26 +1035,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem3=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem4=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem5=/Game/PuzzleBP/Blueprints/Cube
-MRUItem6=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem7=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem9=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem11=/Game/Materials/ALANScreen
-MRUItem12=/Game/Materials/CGreen
-MRUItem13=/Game/Materials/CRed
-MRUItem14=/Game/Materials/ConveyorRed
-MRUItem15=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem16=/Game/Audio/Music/dynamicCue
-MRUItem17=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem18=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem19=/Game/Materials/FloorPlane1
+MRUItem0=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
+MRUItem1=/Game/Audio/Success_Beep/success_beep_Cue
+MRUItem2=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem5=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem7=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem8=/Game/PuzzleBP/Blueprints/Cube
+MRUItem9=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem10=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem14=/Game/Materials/ALANScreen
+MRUItem15=/Game/Materials/CGreen
+MRUItem16=/Game/Materials/CRed
+MRUItem17=/Game/Materials/ConveyorRed
+MRUItem18=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem19=/Game/Audio/Music/dynamicCue
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2531,6 +2528,9 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker=1
 /Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner=1
+/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue.497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue=1
+/Game/Audio/Success_Beep/success_beep_Cue.success_beep_Cue=1
+/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
@@ -2561,7 +2561,7 @@ InstalledPlugins=VictoryBPLibrary
 [DetailPropertyExpansion]
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" "
 MaterialExpression=
-Object="\"Object.Tags.ComponentTags\" "
+Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2571,8 +2571,8 @@ SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent=
 PrimitiveComponent=
-SceneComponent="\"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent=
+ActorComponent=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface=
@@ -2621,7 +2621,7 @@ StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C="\"Object.PuzzleFileName\" "
-ALAN_C="\"Object.CommandsExecuted\" "
+ALAN_C=
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
@@ -2865,7 +2865,7 @@ SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 StaticMeshComponent=
-ControlPanel_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=
