added moving roomba, powerbox and breakerbox

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CurrentScalingGridSize=0
-CurrentPosGridSize=1
+CurrentPosGridSize=0
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -154,15 +154,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Audio
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint.Cylinder_Blueprint
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -183,7 +183,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1035,26 +1035,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
-MRUItem1=/Game/Audio/Success_Beep/success_beep_Cue
-MRUItem2=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem5=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem7=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem8=/Game/PuzzleBP/Blueprints/Cube
-MRUItem9=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem10=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem12=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem14=/Game/Materials/ALANScreen
-MRUItem15=/Game/Materials/CGreen
-MRUItem16=/Game/Materials/CRed
-MRUItem17=/Game/Materials/ConveyorRed
-MRUItem18=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem19=/Game/Audio/Music/dynamicCue
+MRUItem0=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
+MRUItem1=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem2=/Game/Audio/Cylinder_Blueprint
+MRUItem3=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
+MRUItem4=/Game/Audio/Success_Beep/success_beep_Cue
+MRUItem5=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem8=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem9=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem10=/Game/PuzzleBP/Blueprints/Cube
+MRUItem11=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem12=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem15=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem16=/Game/Materials/ALANScreen
+MRUItem17=/Game/Materials/CGreen
+MRUItem18=/Game/Materials/CRed
+MRUItem19=/Game/Materials/ConveyorRed
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2363,6 +2363,22 @@ MaterialExpressionVectorParameter.ParameterCustomization=True
 K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
+Cylinder_Blueprint_C.TransformCommon=True
+Cylinder_Blueprint_C.StaticMesh=True
+Cylinder_Blueprint_C.Materials=True
+Cylinder_Blueprint_C.Physics=True
+Cylinder_Blueprint_C.Collision=True
+Cylinder_Blueprint_C.Lighting=True
+Cylinder_Blueprint_C.Rendering=True
+Cylinder_Blueprint_C.Navigation=True
+Cylinder_Blueprint_C.VirtualTexture=True
+Cylinder_Blueprint_C.Tags=True
+Cylinder_Blueprint_C.Cooking=True
+Cylinder_Blueprint_C.Replication=True
+Cylinder_Blueprint_C.Input=True
+Cylinder_Blueprint_C.Actor=True
+Cylinder_Blueprint_C.Tick=True
+Cylinder_Blueprint_C.Default=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2531,8 +2547,11 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue.497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue=1
 /Game/Audio/Success_Beep/success_beep_Cue.success_beep_Cue=1
 /Game/ParticleFX/AlanRings/ringsSystem.ringsSystem=1
+/Game/PuzzleBP/Blueprints/Cylinder_Blueprint.Cylinder_Blueprint=1
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner;
 RecentlyPlaced=/Game/Geometry/Meshes/Vent.Vent;
@@ -2544,7 +2563,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/RivetStamp.RivetStamp;
 RecentlyPlaced=/Game/Geometry/Meshes/Rivet.Rivet;
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue.looping_factory_ambience__inspectorj-a__Cue;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem;
 RecentlyPlaced=/Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue;
 RecentlyPlaced=/Game/Materials/FloorPlane1.FloorPlane1;
@@ -2552,7 +2570,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker;
 RecentlyPlaced=/Game/Geometry/Meshes/IndustLight.IndustLight;
 RecentlyPlaced=/Game/Geometry/Meshes/Shelf.Shelf;
-RecentlyPlaced=/Game/ParticleFX/spraySystemBP.spraySystemBP;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2561,7 +2578,7 @@ InstalledPlugins=VictoryBPLibrary
 [DetailPropertyExpansion]
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" "
 MaterialExpression=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2569,10 +2586,10 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+MeshComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface=
@@ -2611,16 +2628,16 @@ MaterialEditorInstanceConstant=
 ControlPanel_C=
 Pawn=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+StaticMeshActor=
 GameEnvironment_C=
 LevelScriptActor=
 Cube_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 StaticMeshSocket="\"Object.RelativeLocation\" "
 Box_Bp_C=
-StaticMeshComponent=
+StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C="\"Object.PuzzleFileName\" "
+OutputDisplay_C=
 ALAN_C=
 ConveyorBelt_C=
 Cube_C=
@@ -2635,6 +2652,7 @@ SoundNodeParamCrossFade="\"Object.CrossFade.CrossFadeInput\" \"Object.CrossFade.
 SoundNodeDistanceCrossFade="\"Object.CrossFade.CrossFadeInput\" \"Object.CrossFade.CrossFadeInput.CrossFadeInput[0]\" \"Object.CrossFade.CrossFadeInput.CrossFadeInput[1]\" "
 SoundNode=
 AudioComponent="\"Object.Tags.ComponentTags\" "
+Cylinder_Blueprint_C=
 
 [MaterialEditor]
 PrimType=1
@@ -2858,13 +2876,13 @@ TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2974,6 +2992,7 @@ sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.
 PrimitiveComponent=
 spraySystemBP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
+Cylinder_Blueprint_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
